[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cec2017-rao2"
version = "0.1.0"
description = "CEC2017 benchmark suite using Rao-2 optimization algorithm"
authors = [
    {name = "Lakshya Maheshwari", email = "your.email@example.com"},  # Replace with your actual email
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[tool.setuptools]
packages = ["cec2017_rao2"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
cec2017_rao2 = ["functions/cec2017/data/*.txt"]